[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://src/game/ui/party/party_manager_ui.gd" id="1_party"]
[ext_resource type="Script" path="res://src/game/ui/party/components/formation_grid_component.gd" id="3_grid"]
[ext_resource type="Script" path="res://src/game/ui/party/components/hero_details_component.gd" id="4_details"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dark"]
bg_color = Color(0.1, 0.1, 0.1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_all = 5

[node name="PartyManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_party")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.05, 1)

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Center" type="VBoxContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="Header" type="Label" parent="HBox/Center"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PARTY FORMATION"
horizontal_alignment = 1

[node name="FormationArea" type="Panel" parent="HBox/Center"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_dark")

[node name="Label" type="Label" parent="HBox/Center/FormationArea"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 33.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "Backline  |  Mid  |  Frontline"

[node name="CenterContainer" type="CenterContainer" parent="HBox/Center/FormationArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="Grid" type="GridContainer" parent="HBox/Center/FormationArea/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 5

[node name="RightPanel" type="Panel" parent="HBox"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dark")

[node name="Label" type="Label" parent="HBox/RightPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
text = "DETAILS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBox" type="VBoxContainer" parent="HBox/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2

[node name="CardDisplay" type="CenterContainer" parent="HBox/RightPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="FooterButtons" type="VBoxContainer" parent="HBox/RightPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10

[node name="Save" type="Button" parent="HBox/RightPanel/FooterButtons"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
text = "CONFIRM CHANGES"

[node name="Back" type="Button" parent="HBox/RightPanel/FooterButtons"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
text = "BACK TO ADVENTURE"

[node name="FormationGridComponent" type="Node" parent="." node_paths=PackedStringArray("grid_container")]
script = ExtResource("3_grid")
grid_container = NodePath("../HBox/Center/FormationArea/CenterContainer/Grid")

[node name="HeroDetailsComponent" type="Node" parent="." node_paths=PackedStringArray("card_container")]
script = ExtResource("4_details")
card_container = NodePath("../HBox/RightPanel/VBox/CardDisplay")

[connection signal="pressed" from="HBox/RightPanel/FooterButtons/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="HBox/RightPanel/FooterButtons/Back" to="." method="_on_back_pressed"]
